🌈style: 修改了main content的样式

--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,7 +1,5 @@
-
-.normal {
-}
-
-.title {
-  background: rgb(121, 242, 157);
+.site-content-background {
+  margin: 24px 16px 0;
+  overflow: initial;
+  height: 80vh;
 }
